# Monitoramento-Automatico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.py  compileWiringPi.sh  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
config_files/: config.json
drivers/: Makefile  ads1115_driver.c
drivers_raspberryPi/: ads1115_driver.c
include/: Application.h  Commons.h  Log.h  MoistureSensor.h  SensorManager.h  TCPServer.h  WaterLevelSensor.h  WaterPump.h  WaterPumpManager.h  ads1115.h
interface/exe_interface/: interface.py
interface/web_interface/: app.py
interface/web_interface/static/: script.js  style.css
interface/web_interface/templates/: index.html
interface/web_interface/utils/: tcp.py
src/: Log.cpp  MoistureSensor.cpp  SensorManager.cpp  TCPServer.cpp  WaterLevelSensor.cpp  WaterPump.cpp  WaterPumpManager.cpp  ads1115.cpp  main.cpp
test/include/: MoistureSensorMock.h  WaterLevelSensorMock.h  WaterPumpMock.h
test/src/: MoistureSensorMock.cpp  WaterLevelSensorMock.cpp  WaterPumpMock.cpp
